[tool.poetry]
name = "osmosis-proto"
authors = ["Fabio Nukui <fabio.nukui@gmail.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
description = "The Python Protobuf implementation for Osmisis"
homepage ="https://github.com/fabio-nukui/osmosis.proto"
keywords = ["blockchain", "osmosis", "defi", "crypto"]
license = "MIT"
packages = [{ include = "osmosis_proto" }]
readme = "README.md"
repository = "https://github.com/fabio-nukui/osmosis.proto"
version = "0.1.1"

[tool.poetry.dependencies]
attrs = "^21.2.0"
betterproto = "^2.0.0b3"
python = "^3.9"
protobuf = "^3.17.3"

[tool.poetry.dev-dependencies]
betterproto = {version = "^2.0.0b3", extras = ["compile"]}
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
mypy = "^0.910"
pip = "^21.3"
pytest = "^6.2.5"
wheel = "^0.37.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
